Adds multiFrameModule metadata and updates metadata on example page

--- a/examples/example.css
+++ b/examples/example.css
@@ -1,3 +1,16 @@
+#more-info {
+  border-top: 1px solid silver;
+  border-bottom: 1px solid silver;
+  margin: 1rem 0;
+  transition: background-color 800ms ease-out;
+  padding: 0.5rem;
+  background-color: #eee;
+}
+
+#more-info.highlighted {
+  background-color: #e4f6ff;
+}
+
 #nifti-image-container {
   position: relative;
   width: 512px;
@@ -25,8 +38,16 @@
 
 #nifti-image-data {
   flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: flex-start;
 }
 
 #main-header {
   margin-top: 2rem;
+}
+
+.metadata {
+  margin-right: 1.5rem;
 }
