--- a/examples/orientation-check.css
+++ b/examples/orientation-check.css
@@ -13,23 +13,29 @@
 
 .nifti-image-container {
   position: relative;
-  width: 512px;
-  height: 512px;
+  width: 350px;
+  height: 350px;
   border-style: solid;
   border-color: red;
   color: white;
   margin: 10px;
 }
 
-#nifti-image {
+#nifti-image,
+#nifti-image-x,
+#nifti-image-y {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+  flex: 1;
 }
 
+
 #image-and-data-info {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #nifti-image-data {
